--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.2
+  dio: ^4.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
